tests/snapshots/integration__integration_tests__merge__merge_no_commits_with_changes.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🟡 [33mAuto-staging 1 untracked file:[39m
[107m [0m  newfile.txt
🔄 [36mCommitting changes with default message... [90m(1 file, [32m+1[39m, no squashing needed[39m[90m)[39m[39m
💡 [2mUsing fallback commit message. Run [90mwt config --help[39m[2m for LLM setup guide[22m[22m
[107m [0m  [1mChanges to newfile.txt[22m
✅ [32mCommitted changes @ [2m96ddfbc[22m[39m
🔄 [36mMerging 1 commit to [1mmain[22m @ [2m96ddfbc[22m (no rebase needed)[39m
[107m [0m  * [33m96ddfbc[m Changes to newfile.txt
[107m [0m   newfile.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1mmain[22m [90m(1 commit, 1 file, [32m+1[39m[39m[90m)[39m[39m
🔄 [36m[36mRemoving [1mno-commits-dirty[22m worktree & branch in background (already in main)[39m[39m
